	  (2014-4-21).
	* configs/sam4s-xplained-pro:  Support for the SAM4S Xplained Pro
	  board from Bob Doiron (2014-4-21).
	* configs/sam4s-xplained-pro: Added card detect (kind of broken
	  still); added proc/vfat mounting during init to save some typing.
	  From Bob Doiron (2014-4-21).
	* configs/sam4s-xplained-pro: Boost PLLA to 240MHz to allow USB. From
	  Bob Doiron (2014-4-21).
	* arch/arm/src/sam34/sam_wdt.c/.h:  Add watchdog driver.  From Bob
	  Doiron (2014-4-21).
	* nuttx/configs/sam4s-xplained-pro:  Add board-specific watchdog
	  timer support.  From Bob Doiron (2014-4-21).
	* drivers/timer.c and include/nuttx/timer.h:  Timer "upper half"
	  driver and lower half interface definition from Bob Doiron
	  (2014-40-22).
	* arch/z16/src/z16f/z16f_espi.c:  Add ZNEO ESPI driver (2014-4-24).
	* arch/arm/src/stm32/stm32_sdio.c:  The dmaflight method must
	  be conditioned on CONFIG_SDIO_PREFLIGHT.  Noted by Pelle
	  Windestam (2014-4-25)
	* configs/nucleo-f401re:  Removed bogus references to the MPU
	  (2014-4-25).
	* arch/z16/src/z16f_timerisr.c:  Fix calculation of timer
	  reload and prescaler.  The timer frequency was way too fast
	  (2014-4-25).
	* arch/arm/src/stm32/stm32_otgfsdev.c and others: Sourceforge
	  Ticket #26.  up_prioritize_irq should not be called if
	  CONFIG_ARCH_IRQPRIO is not defined (2014-4-25).

7.3 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/sama5/sam_clockconfig.c:  Needed function sam_pmcwait()
	  is needed when UDPHS, EHCI, or OHCI is configured but may not be
	  compiled in due to insufficient conditional logic.  From Luciano Neri
	  (SourceForge patch #40) (2014-4-29).
	* arch/arm/include/stm32/chip.h, src/stm32/Kconfig, stm32_allocateheap.c,
	  configs/nucleo-f401re/nsh/defconfig, and scripts/ld.script:  Numerous
	  changes, most correcting memory usage on the Nucleo-F401RE (2014-4-30).
	* /drivers/mtd/w25.c: Extended by Mark Whitehorn to support the 8Mbit
	  W25Q80BV part (2014-4-30).