@@ -10,4 +10,9 @@ config SAM4S_XPLAINED_PRO_CDCACM_DEVMINOR
 	default 0
 	depends on SAM34_UDP && USBDEV && CDCACM
 
+config SAM4S_XPLAINED_PRO_CPULOAD_TIMER_DEVPATH
+    string "CPU Load Timer Device Path"
+	default "/dev/tc0"
+	depends on TIMER && SCHED_CPULOAD && SCHED_CPULOAD_EXTCLK
+
 endif
