@@ -342,6 +342,7 @@ CONFIG_NSH_MMCSDSLOTNO=0
 # Board-Specific Options
 #
 CONFIG_SAM4S_XPLAINED_PRO_CDCACM_DEVMINOR=0
+CONFIG_SAM4S_XPLAINED_PRO_CPULOAD_TIMER_DEVPATH="/dev/tc0"
 
 #
 # RTOS Features
@@ -389,7 +390,8 @@ CONFIG_NPTHREAD_KEYS=4
 # Performance Monitoring
 #
 CONFIG_SCHED_CPULOAD=y
-# CONFIG_SCHED_CPULOAD_EXTCLK is not set
+CONFIG_SCHED_CPULOAD_EXTCLK=y
+CONFIG_SCHED_CPULOAD_TICKSPERSEC=333
 CONFIG_SCHED_CPULOAD_TIMECONSTANT=2
 # CONFIG_SCHED_INSTRUMENTATION is not set
 
@@ -513,8 +515,8 @@ CONFIG_USART1_ISUART=y
 CONFIG_MCU_SERIAL=y
 CONFIG_STANDARD_SERIAL=y
 # CONFIG_SERIAL_TIOCSERGSTRUCT is not set
-CONFIG_UART0_SERIAL_CONSOLE=y
-# CONFIG_UART1_SERIAL_CONSOLE is not set
+# CONFIG_UART0_SERIAL_CONSOLE is not set
+CONFIG_UART1_SERIAL_CONSOLE=y
 # CONFIG_USART1_SERIAL_CONSOLE is not set
 # CONFIG_NO_SERIAL_CONSOLE is not set
 
@@ -784,6 +786,8 @@ CONFIG_EXAMPLES_NSH_CXXINITIALIZE=y
 # CONFIG_EXAMPLES_ROMFS is not set
 # CONFIG_EXAMPLES_SENDMAIL is not set
 CONFIG_EXAMPLES_SERIALBLASTER=y
+CONFIG_EXAMPLES_SERIALBLASTER_STACKSIZE=2048
+CONFIG_EXAMPLES_SERIALBLASTER_PRIORITY=50
 CONFIG_EXAMPLES_SERIALRX=y
 CONFIG_EXAMPLES_SERIALRX_STACKSIZE=2048
 CONFIG_EXAMPLES_SERIALRX_PRIORITY=50
@@ -1007,8 +1011,8 @@ CONFIG_SYSTEM_SYSINFO_STACKSIZE=1024
 #
 CONFIG_SYSTEM_STACKMONITOR=y
 CONFIG_SYSTEM_STACKMONITOR_STACKSIZE=1024
-CONFIG_SYSTEM_STACKMONITOR_PRIORITY=50
-CONFIG_SYSTEM_STACKMONITOR_INTERVAL=2
+CONFIG_SYSTEM_STACKMONITOR_PRIORITY=110
+CONFIG_SYSTEM_STACKMONITOR_INTERVAL=1
 
 #
 # USB CDC/ACM Device Commands
