@@ -7266,3 +7266,12 @@
 	  changes, most correcting memory usage on the Nucleo-F401RE (2014-4-30).
 	* /drivers/mtd/w25.c: Extended by Mark Whitehorn to support the 8Mbit
 	  W25Q80BV part (2014-4-30).
+	* configs/sam4s-xplained-pro:  Update LED control logic from Bob Doiron
+	  (2014-4-30).
+	* drivers/timer.c and include/nuttx/timer.h: Enhanced timer interface
+	  from Bob Doiron (2014-4-30).
+	* arch/arm/src/sam34/Kconfig and sam_tc.c: Enhanced timer/counter driver
+	  from Bob Doiron (2014-4-30).
+	* configs/sam4s-xplained-pro/Kconfig, nsh/defconfig, and src/sam_tc.c:
+	  The SAM4S Xplained Pro now uses the extended timer/counter features.
+	  From Bob Doiron (2014-4-30).
